# maqueen-plus-v3-micropython

./: .gitignore  Makefile  README.md  build.py  flash_microbit.sh  test_pid_0x3C.py  test_pid_calib.py  test_pid_distance.py  test_pid_simple.py  test_pid_status.py
docs/: LASER_SENSOR_INTEGRATION_PLAN.md  MAPPER_USAGE.md  NAVIGATION_V2_SPEC.md  PID_SYSTEM_V3.md  QUICK_START.md  SEN0628_DRIVER_PLAN.md  SEN0628_DRIVER_TASK.md  SLAM_IMPLEMENTATION_PLAN.md  SLAM_RESEARCH.md  SOURCES.md  ZEPHYR_MAPPING_PLAN.md  ZEPHYR_MAQUEEN_ROADMAP.md  ZEPHYR_MISSING_DRIVERS.md
examples/: light_seeker.py  line_follower.py  remote_control.py
src/: distance_map.py  fall_detector.py  gap_finder.py  i2c_scanner.py  laser_matrix.py  main.py  maqueen_plus_v3.py  micro_slam.py  mini_grid.py  obstacle_avoidance_visual.py  odometry.py  test_encoders.py  test_laser.py
stubs/: microbit.pyi
tools/: generate_sample_map.py  map_viewer.py  sample_map.txt  test.txt
zephyr-app/: CMakeLists.txt  Kconfig  README.md  build.sh  prj.conf
zephyr-app/apps/calibrate/: CMakeLists.txt  prj.conf
zephyr-app/apps/encoder_test/: CMakeLists.txt  benchmark_math.sh  prj.conf
zephyr-app/apps/encoder_test/boards/: bbc_microbit_v2.overlay
zephyr-app/apps/encoder_test/src/: main.c
zephyr-app/apps/lidar_benchmark/: CMakeLists.txt  prj.conf
zephyr-app/apps/lidar_benchmark/boards/: bbc_microbit_v2.overlay
zephyr-app/apps/lidar_benchmark/src/: main.c
zephyr-app/apps/mapper/: CMakeLists.txt  prj.conf
zephyr-app/apps/mapper/boards/: bbc_microbit_v2.overlay
zephyr-app/apps/mapper/src/: main.c  main_pid.c.example
zephyr-app/apps/pid_test/: CMakeLists.txt  prj.conf
zephyr-app/apps/pid_test/boards/: bbc_microbit_v2.overlay
zephyr-app/apps/pid_test/src/: main.c
zephyr-app/apps/proximity_leds/: CMakeLists.txt  prj.conf
zephyr-app/apps/proximity_leds/boards/: bbc_microbit_v2.overlay
zephyr-app/apps/proximity_leds/src/: main.c
zephyr-app/boards/: bbc_microbit_v2.overlay
zephyr-app/drivers/sen0628/: CMakeLists.txt  Kconfig  sen0628.c  sen0628.h  sen0628_proto.h
zephyr-app/dts/bindings/: dfrobot,maqueen-motor.yaml
zephyr-app/dts/bindings/sensor/: dfrobot,sen0628.yaml
zephyr-app/src/: frontier_nav.c  frontier_nav.h  main.c  map_shell.c  map_storage.c  map_storage.h  maqueen.c  maqueen.h  occupancy_grid.c  occupancy_grid.h  odometry.c  odometry.c.lookup  odometry.h  odometry_math.c  pid_control.c  pid_control.h  scanner_360.c  scanner_360.h
